--- a/example/index.html
+++ b/example/index.html
@@ -23,7 +23,7 @@
             message: 'Hello Vue!'
         }
     })
-    var html = new saveToHtml('html', {url: 'https://www.baidu.com'})
+    var html = new saveToHtml('html', {url: 'www.baidu.com'})
     </script>
 </body>
 
